Avoid using com.sun.tools.javac in tests